Final review of MA 1, a couple passages improved and notes added.

--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -11,15 +11,37 @@ next: MA_002.html
 <h2>Chapter 1: The Sevens</h2>
 
 <table class="trans">
-  <th class='ch'>（一） 中阿含 七法品 善法經第一</th>
+  <th class='ch'>（一） 中阿含、七法品、善法經第一</th>
   <th class='en'>1. Skillful Qualities</th>
   <tr>
-    <td class='ch' title='t26.1.421a13'>我聞如是： 一時，佛遊舍衛國，在勝林、給孤獨園。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.</td>
+    <td class='ch' title='t26.1.421a3'>中阿含經卷第一</td>
+    <td class="fasc_heading">Fascicle 1 of the <cite>Medium Discourses</cite></td>
   </tr>
   <tr>
-    <td class='ch' title='t26.1.421a14'>爾時，世尊告諸比丘： 「若有比丘成就七法者，便於賢聖得歡喜樂，正趣漏盡。 云何為七？ 謂比丘知法、知義、知時、知節、知己、知衆、知人勝如。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven qualities, then he’ll attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? A monk knows the teaching, knows the meaning, knows the time, knows moderation, knows himself, knows the community, and knows the superiority of people.</td>
+    <td class='ch' title='t26.1.421a5'>東晉孝武及安帝世 隆安元年十一月至二年六月了於東亭寺 罽賓三藏瞿曇僧伽提婆譯 道祖筆受</td>
+    <td class="taisho_byline">Translated by the Kasmiri Tripiṭa Gautama Saṅghadeva at Dongting Monastery between the first year and eleventh month and the second year and sixth month of the Longan Era during the time of Emperors Xiaowu and An of the Eastern Jin (ca. 397-398 CE)<sup id="ref1"><a href="#n1">1</a></sup></td>
+  </tr>
+<tr>
+  <td title='t26.1.421a10'><ul class='verse'>
+    <li class='ch'>善法、晝度樹，<br/>
+    城、水、木積喻，<br/>
+    善人往、世福，<br/>
+    日、車、漏盡七。</li>
+  </ul></td>
+  <td><ul class='vagga-uddana'>
+    <li>[1] Skillful qualities, [2] the <em>pārijāta</em> tree,<br/>
+    The [3] city, [4] water, and [5] woodpile parables,<br/>
+    [6] The good person’s departure and [7] worldly merit,<br/>
+    And [8] the suns, [9] chariots, and [10] end of contaminants are sevens.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='t26.1.421a13'>我聞如是： 一時，佛遊舍衛國，在勝林、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref2"><a href="#n2">2</a></sup> One time, the Buddha traveled to the country of Śrāvastī and was staying at Anāthapiṇḍada’s Park in Jeta’s Grove.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.421a14'>爾時，世尊告諸比丘： 「若有比丘成就七法者，便於賢聖得歡喜樂，正趣漏盡。 云何為七？ 謂比丘知法、知義、知時、知節、知己、知眾、知人勝如。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven qualities, then he’ll attain the joy and happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? A monk knows the teaching, knows the meaning, knows the time, knows moderation, knows himself, knows the community, and knows what the better person is like.</td>
   </tr>
 <tr>
   <td class='ch' title='t26.1.421a17'></td>
@@ -27,15 +49,15 @@ next: MA_002.html
 </tr>
   <tr>
     <td class='ch' title='t26.1.421a17'>「云何比丘為知法耶？ 謂比丘知正經、歌詠、記說、偈咃、因縁、撰録、本起、此說、生處、廣解、未曾有法、及說是義。 是謂比丘為知法也。</td>
-    <td id='p3'>3. “How does a monk know the teaching? A monk knows the right <em>sūtra</em>s, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.<sup id="ref2"><a href="#n2">2</a></sup> This is called a monk who knows the teaching.</td>
+    <td id='p3'>3. “How does a monk know the teaching? A monk knows the proper <em>sūtra</em>s, songs, explanations, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.<sup id="ref3"><a href="#n3">3</a></sup> This is called a monk who knows the teaching.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421a20'>「若有比丘不知法者，謂不知正經、歌詠、記說、偈咃、因縁、撰録、本起、此說、生處、廣解、未曾有法、及說義。 如是比丘為不知法。</td>
-    <td id='p4'>4. “Suppose a monk doesn’t know the teaching, which is to say that he doesn’t know the right <em>sūtra</em>s, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. Such a monk doesn’t know the teaching.</td>
+    <td id='p4'>4. “Suppose a monk doesn’t know the teaching, which is to say that he doesn’t know the proper <em>sūtra</em>s, songs, explanations, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. Such a monk doesn’t know the teaching.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421a23'>「若有比丘善知法者，謂知正經、歌詠、記說、偈咃、因縁、撰録、本起、此說、生處、廣解、未曾有法、及說義。 是謂比丘善知法也。</td>
-    <td id='p5'>5. “Suppose a monk knows the teaching well, which is to say that he knows the right <em>sūtra</em>s, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. This is called a monk who knows the teaching well.</td>
+    <td id='p5'>5. “Suppose a monk knows the teaching well, which is to say that he knows the proper <em>sūtra</em>s, songs, explanations, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. This is called a monk who knows the teaching well.</td>
   </tr>
 <tr>
   <td class='ch' title='t26.1.421a25'></td>
@@ -59,7 +81,7 @@ next: MA_002.html
 </tr>
   <tr>
     <td class='ch' title='t26.1.421b2'>「云何比丘為知時耶？ 謂比丘知是時修下相、是時修高相、是時修捨相。 是謂比丘為知時也。</td>
-    <td id='p9'>9. “How does a monk know the time? A monk knows the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance. This is called a monk who knows the time.</td>
+    <td id='p9'>9. “How does a monk know the time? A monk knows the time to cultivate a humble appearance, the time to cultivate a dignified appearance, and the time to cultivate an indifferent appearance.<sup id="ref4"><a href="#n4">4</a></sup> This is called a monk who knows the time.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421b4'>「若有比丘不知時者，謂不知是時修下相、是時修高相、是時修捨相。 如是比丘為不知時。</td>
@@ -75,7 +97,7 @@ next: MA_002.html
 </tr>
   <tr>
     <td class='ch' title='t26.1.421b8'>「云何比丘為知節耶？ 謂比丘知節，若飮、若食、若去、若住、若坐、若臥、若語、若默、若大小便，捐除睡眠，修行正智。 是謂比丘為知節也。</td>
-    <td id='p12'>12. “How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge.<sup id="ref4"><a href="#n4">4</a></sup> This is called a monk who knows moderation.</td>
+    <td id='p12'>12. “How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge.<sup id="ref5"><a href="#n5">5</a></sup> This is called a monk who knows moderation.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421b11'>「若有比丘不知節者，謂不知若飮、若食、若去、若住、若坐、若臥、若語、若默、若大小便，捐除睡眠，修行正智。 如是比丘為不知節。</td>
@@ -83,7 +105,7 @@ next: MA_002.html
   </tr>
   <tr>
     <td class='ch' title='t26.1.421b14'>「若有比丘善知節者，謂知若飮、若食、若去、若住、若坐、若臥、若語、若默、若大小便，捐除睡眠，修行正智。 是謂比丘善知節也。</td>
-    <td id='p14'>14. “Suppose a monk knows moderation well, which is to say that he knows it well whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation well.</td>
+    <td id='p14'>14. “Suppose a monk knows moderation well, which is to say that he knows it whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation well.</td>
   </tr>
 <tr>
   <td class='ch' title='t26.1.421b17'></td>
@@ -106,64 +128,68 @@ next: MA_002.html
   <td class='subheading'>Knowing the Community</td>
 </tr>
   <tr>
-    <td class='ch' title='t26.1.421b24'>「云何比丘為知衆耶？ 謂比丘知： 『此刹利衆、此梵志衆、此居士衆、此沙門衆。 我於彼衆應如是去、如是住、如是坐、如是語、如是默。』 是謂比丘為知衆也。</td>
-    <td id='p18'>18. “How does a monk know the community? A monk knows: ‘This is a community of warriors … this is a community of priests … this is a community of householders … this is a community of ascetics.<sup id="ref5"><a href="#n5">5</a></sup> In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who knows the community.</td>
+    <td class='ch' title='t26.1.421b24'>「云何比丘為知眾耶？ 謂比丘知： 『此刹利眾、此梵志眾、此居士眾、此沙門眾。 我於彼眾應如是去、如是住、如是坐、如是語、如是默。』 是謂比丘為知眾也。</td>
+    <td id='p18'>18. “How does a monk know the community? A monk knows: ‘This is a community of warriors … this is a community of brahmins … this is a community of householders … this is a community of ascetics.<sup id="ref6"><a href="#n6">6</a></sup> In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who knows the community.</td>
   </tr>
   <tr>
-    <td class='ch' title='t26.1.421b27'>「若有比丘不知衆者，謂不知： 『此刹利衆、此梵志衆、此居士衆、此沙門衆。 我於彼衆應如是去、如是住、如是坐、如是語、如是默。』 如是比丘為不知衆。</td>
-    <td id='p19'>19. “Suppose a monk doesn’t know the community, which is to say that he doesn’t know: ‘This is a community of warriors … this is a community of priests … this is a community of householders … this is a community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ Such a monk doesn’t know the community.</td>
+    <td class='ch' title='t26.1.421b27'>「若有比丘不知眾者，謂不知： 『此刹利眾、此梵志眾、此居士眾、此沙門眾。 我於彼眾應如是去、如是住、如是坐、如是語、如是默。』 如是比丘為不知眾。</td>
+    <td id='p19'>19. “Suppose a monk doesn’t know the community, which is to say that he doesn’t know: ‘This is a community of warriors … this is a community of brahmins … this is a community of householders … this is a community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ Such a monk doesn’t know the community.</td>
   </tr>
   <tr>
-    <td class='ch' title='t26.1.421c2'>「若有比丘善知衆者，謂知： 『此刹利衆、此梵志衆、此居士衆、此沙門衆。 我於彼衆應如是去、如是住、如是坐、如是語、如是默。』 是謂比丘善知衆也。</td>
-    <td id='p20'>20. “Suppose a monk well knows the community, which is to say that he well knows: ‘This is a community of warriors … this is a community of priests … this is a community of householders … this is a community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who well knows the community.</td>
+    <td class='ch' title='t26.1.421c2'>「若有比丘善知眾者，謂知： 『此刹利眾、此梵志眾、此居士眾、此沙門眾。 我於彼眾應如是去、如是住、如是坐、如是語、如是默。』 是謂比丘善知眾也。</td>
+    <td id='p20'>20. “Suppose a monk knows the community well, which is to say that he knows: ‘This is a community of warriors … this is a community of priests … this is a community of householders … this is a community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who knows the community well.</td>
   </tr>
 <tr>
   <td class='ch' title='t26.1.421c5'></td>
-  <td class='subheading'>Knowing the Superiority of People</td>
+  <td class='subheading'>Knowing What the Better Person Is Like</td>
 </tr>
   <tr>
     <td class='ch' title='t26.1.421c5'>「云何比丘知人勝如？ 謂比丘知有二種人：有信、有不信。 若信者勝；不信者為不如也。</td>
-    <td id='p21'>21. “How does a monk know the superiority of people? A monk knows there are two kinds of people: believers and non-believers. If someone is a believer, they’re superior; a non-believer is not.</td>
+    <td id='p21'>21. “How does a monk know the what the better person is like? A monk knows there are two kinds of people: believers and non-believers. If someone is a believer, they’re the better one; a non-believer is not.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421c7'>「謂信人復有二種：有數往見比丘、有不數往見比丘。 若數往見比丘者勝；不數往見比丘者為不如也。</td>
-    <td id='p22'>22. “Also, there are two kinds of believers: those who frequently visit the monks and those who don’t frequently visit the monks. If someone frequently visits the monks, they’re superior; someone who doesn’t frequently visit the monks is not.</td>
+    <td id='p22'>22. “Also, there are two kinds of believers: those who frequently visit the monks and those who don’t frequently visit the monks. If someone frequently visits the monks, they’re the better one; someone who doesn’t frequently visit the monks is not.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421c10'>「謂數往見比丘人復有二種：有禮敬比丘、有不禮敬比丘。 若禮敬比丘者勝；不禮敬比丘者為不如也。</td>
-    <td id='p23'>23. “Also, there are two kinds of people who frequently visit the monks: those who revere the monks and those who don’t revere the monks. If someone reveres the monks, they’re superior; someone who doesn’t revere the monks is not.</td>
+    <td id='p23'>23. “Also, there are two kinds of people who frequently visit the monks: those who revere the monks and those who don’t revere the monks. If someone reveres the monks, they’re the better one; someone who doesn’t revere the monks is not.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421c12'>「謂禮敬比丘人復有二種：有問經、有不問經。 若問經者勝；不問經者為不如也。</td>
-    <td id='p24'>24. “Also, there are two kinds of people who revere the monks: those who have questions about the <em>sūtra</em>s and those who don’t have questions about the <em>sūtra</em>s. If someone asks about the <em>sūtra</em>s, they’re superior; someone who doesn’t ask about the <em>sūtra</em>s is not.</td>
+    <td id='p24'>24. “Also, there are two kinds of people who revere the monks: those who have questions about the <em>sūtra</em>s and those who don’t have questions about the <em>sūtra</em>s. If someone asks about the <em>sūtra</em>s, they’re the better one; someone who doesn’t ask about the <em>sūtra</em>s is not.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421c14'>「謂問經人復有二種：有一心聽經、有不一心聽經。 若一心聽經者勝；不一心聽經者為不如也。</td>
-    <td id='p25'>25. “Also, there are two kinds of people who ask about the <em>sūtra</em>s: those who whole-heartedly listen to the <em>sūtra</em>s and those who don’t whole-heartedly listen to the <em>sūtra</em>s. If someone whole-heartedly listens to the <em>sūtra</em>s, they’re superior; someone who doesn’t whole-heartedly listen to the <em>sūtra</em>s is not.</td>
+    <td id='p25'>25. “Also, there are two kinds of people who ask about the <em>sūtra</em>s: those who whole-heartedly listen to the <em>sūtra</em>s and those who don’t whole-heartedly listen to the <em>sūtra</em>s. If someone whole-heartedly listens to the <em>sūtra</em>s, they’re the better one; someone who doesn’t whole-heartedly listen to the <em>sūtra</em>s is not.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421c16'>「謂一心聽經人復有二種：有聞持法、有聞不持法。 若聞持法者勝；聞不持法者為不如也。</td>
-    <td id='p26'>26. “Also, there are two kinds of people who whole-heartedly listen to the <em>sūtra</em>s: those who hear and retain the teaching and those who hear but don’t retain the teaching. If someone hears and retains the teaching, they’re superior; someone who hears but doesn’t retain the teaching is not.</td>
+    <td id='p26'>26. “Also, there are two kinds of people who whole-heartedly listen to the <em>sūtra</em>s: those who hear and retain the teaching and those who hear but don’t retain the teaching. If someone hears and retains the teaching, they’re the better one; someone who hears but doesn’t retain the teaching is not.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421c19'>「謂聞持法人復有二種：有聞法觀義、有聞法不觀義。 若聞法觀義者勝；聞法不觀義者為不如也。</td>
-    <td id='p27'>27. “Also, there are two kinds of people who hear and retain the teaching: those who hear the teaching and contemplate its meaning and those who hear the teaching but don’t contemplate its meaning. If someone hears the teaching and contemplates its meaning, they’re superior; someone who hears the teaching but doesn’t contemplate its meaning is not.</td>
+    <td id='p27'>27. “Also, there are two kinds of people who hear and retain the teaching: those who hear the teaching and contemplate its meaning and those who hear the teaching but don’t contemplate its meaning. If someone hears the teaching and contemplates its meaning, they’re the better one; someone who hears the teaching but doesn’t contemplate its meaning is not.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421c21'>「謂聞法觀義人復有二種： 有知法、知義、向法次法、隨順於法、如法行之。 有不知法、不知義、不向法次法、不隨順法、不如法行。 若知法、知義、向法次法、隨順於法、如法行者勝。 不知法、不知義、不向法次法、不隨順法、不如法行者為不如也。</td>
-    <td id='p28'>28. “Also, there are two kinds of people who hear the teaching and contemplate its meaning: There are those who know the teaching, know its meaning, go from one principle to the next, conform to the teaching, and conduct themselves according to the teaching. Then, there are those who don’t know the teaching, don’t know its meaning, don’t go from one principle to the next, don’t conform to the teaching, and don’t conduct themselves according to the teaching. If someone knows the teaching, knows its meaning, goes from one principle to the next, conforms to the teaching, and conducts themselves according to the teaching, they’re superior. Someone who doesn’t know the teaching, doesn’t know its meaning, doesn’t go from one principle to the next, doesn’t conform to the teaching, and doesn’t conduct themselves according to the teaching is not.</td>
+    <td id='p28'>28. “Also, there are two kinds of people who hear the teaching and contemplate its meaning: There are those who know the teaching, know its meaning, go from one principle to the next, conform to the teaching, and conduct themselves according to the teaching. Then, there are those who don’t know the teaching, don’t know its meaning, don’t go from one principle to the next, don’t conform to the teaching, and don’t conduct themselves according to the teaching. If someone knows the teaching, knows its meaning, goes from one principle to the next, conforms to the teaching, and conducts themselves according to the teaching, they’re the better one. Someone who doesn’t know the teaching, doesn’t know its meaning, doesn’t go from one principle to the next, doesn’t conform to the teaching, and doesn’t conduct themselves according to the teaching is not.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.421c27'>「謂知法、知義、向法次法、隨順於法、如法行人復有二種： 有自饒益亦饒益他、饒益多人、愍傷世間、為天為人求義及饒益、求安隱快樂。 有不自饒益亦不饒益他、不饒益多人、不愍傷世間、不為天不為人求義及饒益、求安隱快樂。 若自饒益亦饒益他、饒益多人、愍傷世間、為天為人求義及饒益、求安隱快樂者，此人於彼人中為極第一。 為大、為上、為最、為勝、為尊、為妙。</td>
-    <td id='p29'>29. “It also means that there are two kinds of people who know the teaching, know its meaning, go from one principle to the next, conform to the teaching, and conduct themselves according to the teaching: There are those who benefit themselves, benefit others, benefit many people, pity the world, seek both meaning and benefit for gods and humans, and seek their peace and happiness. Then, there are those who don’t benefit themselves, don’t benefit others, don’t benefit many people, don’t pity the world, don’t seek both meaning and benefit for gods and humans, and don’t seek their peace and happiness. If someone benefits themselves, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks their peace and happiness, this person is the very best among people. They’re great, superior, exceptional, excellent, honored, and marvelous.</td>
+    <td id='p29'>29. “It also means that there are two kinds of people who know the teaching, know its meaning, go from one principle to the next, conform to the teaching, and conduct themselves according to the teaching: There are those who benefit themselves, benefit others, benefit many people, pity the world, seek both meaning and benefit for gods and humans, and seek their peace and happiness. Then, there are those who don’t benefit themselves, don’t benefit others, don’t benefit many people, don’t pity the world, don’t seek both meaning and benefit for gods and humans, and don’t seek their peace and happiness. If someone benefits themselves, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks their peace and happiness, this person is the very best of people. They’re great, better, exceptional, excellent, honored, and marvelous.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.422a7'>「譬如因牛有乳，因乳有酪，因酪有生酥，因生酥有熟酥，因熟酥有酥精。 酥精者於彼中為極第一。 為大、為上、為最、為勝、為尊、為妙。 如是，若人自饒益亦饒益他、饒益多人、愍傷世間、為天為人求義及饒益、求安隱快樂。 此二人如上所說、如上分別、如上施設，此為第一、為大、為上、為最、為勝、為尊、為妙。 是謂比丘知人勝如。」</td>
-    <td id='p30'>30. “It’s just as there’s milk because of a cow, there’s cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, superior, exceptional, excellent, honored, and marvelous. Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks their peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, they’re the best, great, superior, exceptional, excellent, honored, and marvelous. This is called a monk who knows the superiority of people.”</td>
+    <td id='p30'>30. “Just as there’s milk because of a cow, there’s cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, better, exceptional, excellent, honored, and marvelous.<sup id="ref7"><a href="#n7">7</a></sup> Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks their peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, they’re the best, great, better, exceptional, excellent, honored, and marvelous. This is called a monk who knows what the better person is like.”</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.422a15'>佛說如是。 彼諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p31'>31. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t26.1.422a17'>善法經第一竟 (一千四百二十三字)</td>
+    <td class="sutra_end">The End of the <cite>Skillful Qualities Sūtra</cite> (1,423 Chinese characters)<sup id="ref8"><a href="#n8">8</a></sup></td>
   </tr>
 </table>
 
@@ -172,16 +198,26 @@ next: MA_002.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0421a12" target="_blank">T26.1.421a12-2a17</a>. The correct reading of this <em>sūtra</em>’s title would appear to be “Skillful Qualities” given the occurrence of <span class="ch">善法</span> in <a href="MA_095.html" target="_blank">MĀ 95</a>, which has a list of skillful qualities as its subject. Here, we have another such list of skillful qualities that make one a competent renunciate.</p>
-<p>Direct parallels to this <em>sūtra</em> include <a href="https://suttacentral.net/an7.68" target="_blank">AN 7.68</a>, EĀ 39.1, T27, and a quotation in the <em>Abhidharma Saṃgītiparyāya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T26n1536_p0437b18" target="_blank">T1536.26.437b18-c10</a>). [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p>This is the traditional list of twelve (sometimes nine) types of <em>sūtra</em>s found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (<em>gāthā</em>), and the order of these lists varied from source to source. Using the traditional S. interpretations of <em>itivṛttaka</em>, <em>vyākaraṇa</em>, and <em>udāna</em> as clues, I arrive at this list: S. <em>sūtra</em>, <em>geya</em>, <em>vyākaraṇa</em>, <em>gāthā</em>, <em>nidāna</em>, <em>itivṛttaka</em>, <em>avadāna</em>, <em>udāna</em>, <em>jātaka</em>, <em>vaipulya</em>, <em>adbhuta-dharma</em>, and <em>upadeśa</em>. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p>This passage is cryptic. A parallel passage in Xuanzang’s translation of the <em>Abhidharma Saṃgītiparyāya</em> (T1536.437b24-26) reads: “This is a time he should cultivate calm appearances … active appearances … indifferent appearances” (<span class="ch">謂此時應修止相⋯舉相⋯捨相等</span>). This seems to refer to a monk’s disposition or daily activities. I’ve translated the passage here in terms of social position. [<a href="#ref3">back</a>]</p></li>
-<li id="n4"><p><em>relieving himself</em>. C. <span class="ch">大小便</span>. The Chinese expression is a euphemism for defecating and urinating. [<a href="#ref4">back</a>]</p></li>
-<li id="n5"><p><em>warriors … priests … householders … ascetics</em>. S. <em>kṣatriya</em>, <em>brāhmaṇa</em>, <em>gṛhapati</em>, and <em>śramaṇa</em>. The warriors were in later eras the nobility of India, being the heads of government and the military. Householders were well-to-do and influential people due to wealth like today’s urban middle class, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life, taken vows of poverty, and adopted a nomadic life. [<a href="#ref5">back</a>]</p></li>
+<li id="n1"><p>The present text was a re-translation of a version of the <cite>Madhyama Āgama</cite> that had been translated to Chinese by Dao-an’s Chang’an team around 385 CE. This new translation was completed in 398 and released in 402 by a team that worked at a <em>vihāra</em> in modern Nanjing.</p>
+<p>The intervening years had seen a significant amount of warfare and political chaos that resulted from the defeat of Fu Jian’s attempt to conquer southern China. His empire in northern China subsequently broke up into smaller states, while the south remained under the control of the Eastern Jin dynasty. Dao-an’s translation team had worked under Fu Jian’s auspices and found themselves in the middle of the fighting when Chang’an fell shortly after their translation of the <cite>Ekottarika Āgama</cite> was complete.</p>
+<p>While Dao-an perished, several members of his team escaped to continue their translation work. One of them was Gautama Saṅghadeva who joined the translation project in Nanjing to produce a second translation of the <cite>Medium Discourses</cite>.</p>
+<p>The political chaos continued, however, and their work was interrupted in 399 by a destructive rebellion that took several years to resolve. This resulted in a delayed release of their new translation in 402. Despite these difficulties, the new translation was well-edited and has been well-perserved, unlike the unfortunate situation that we have with other Āgama translations from the same period. The first translation of the <cite>Madhyama Āgama</cite> was apparently poorly edited and/or maintained. As a result, this new translation supplanted it, and it eventually disappeared. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0421a12" target="_blank">T26.1.421a12-2a17</a>. The correct reading of this <em>sūtra</em>’s title would appear to be “Skillful Qualities” given the occurrence of <span class="ch">善法</span> in <a href="MA_095.html" target="_blank">MĀ 95</a>, which has a list of skillful qualities as its subject. Here, we have another such list of skillful qualities that make one a competent renunciate.</p>
+<p>Direct parallels to this <em>sūtra</em> include <a href="https://suttacentral.net/an7.68" target="_blank">AN 7.68</a>, <a href="https://suttacentral.net/ea39.1" target="_blank">EĀ 39.1</a>, <a href="https://suttacentral.net/T27" target="_blank">T27</a>, and a passage in the Mahāyāna <cite>Parinirvāṇa Sūtra</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T12n0374_p0451b13" target="_blank">T374</a> and <a href="https://cbetaonline.dila.edu.tw/zh/T12n0375_p0693b14" target="_blank">T375</a>). The same list of seven things a monk should know is also found in a variety of sources, such as <a href="https://cbetaonline.dila.edu.tw/zh/T01n0006_p0176c20" target="_blank">T6</a>, <a href="https://cbetaonline.dila.edu.tw/zh/T01n0013_p0236c23" target="_blank">T13</a>, <a href="https://suttacentral.net/dn33#2.3.14" target="_blank">DN 33</a>, <a href="https://cbetaonline.dila.edu.tw/zh/T24n1451_p0383c12" target="_blank">T1451</a>, and in the <em>Abhidharma Saṃgītiparyāya</em> (<a href="https://cbetaonline.dila.edu.tw/zh/T26n1536_p0437b18" target="_blank">T1536.26.437b18-c10</a>).</p>
+<p>The consistency of the list, which is virtually the same in meaning and order across these various parallels, indicates that it was an important pre-sectarian teaching. However, the interpretation of the list items varies between sectarian traditions, indicating that the explanations were recorded later. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p>This is the traditional list of twelve (sometimes nine) types of <em>sūtra</em>s found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (<em>gāthā</em>), and the order of these lists varied from source to source. Using the traditional S. interpretations of <em>itivṛttaka</em>, <em>vyākaraṇa</em>, and <em>udāna</em> as clues, I arrive at this list: S. <em>sūtra</em>, <em>geya</em>, <em>vyākaraṇa</em>, <em>gāthā</em>, <em>nidāna</em>, <em>itivṛttaka</em>, <em>avadāna</em>, <em>udāna</em>, <em>jātaka</em>, <em>vaipulya</em>, <em>adbhuta-dharma</em>, and <em>upadeśa</em>.</p>
+<p>I had previously translated <em>vyākaraṇa</em> as “assurances” because there is a strong bias toward reading this term as a prediction given by the Buddha about a disciple’s future births or awakening in later Buddhist literature. In Sanskrit, <em>vyākaraṇa</em> has this meaning, but it also can mean “detailed explanation” or “analysis.” Since the last time I reviewed this translation, I’ve seen definitions of <em>vyākaraṇa</em> from early Buddhist perspectives that interpret <em>vyākaraṇa sūtra</em>s as those in which the Buddha gave a particular disciple a teaching about a subject or his disciples gave their own analysis of a subject. I’ve therefore decided to adopt “explanations” as a better English translation.</p>
+<p>This is also the only version of this list that characterizes it with S. <em>samyak</em> (<span class="ch">正</span>). I assume it means “correct” in the sense that they are authentic teachings that descend from the Buddha and First Council. I’ve chosen “proper” as a translation here. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p>This passage is cryptic. A parallel passage in Xuanzang’s translation of the <em>Abhidharma Saṃgītiparyāya</em> (T1536.437b24-26) reads: “This is a time he should cultivate calm appearances … active appearances … indifferent appearances” (<span class="ch">謂此時應修止相⋯舉相⋯捨相等</span>). This seems to refer to a monk’s disposition or daily activities. I’ve translated the passage here in terms of social position, as the terms used are <span class="ch">下</span> (“lowly”), <span class="ch">高</span> (“eminent”), and <span class="ch">捨</span> (“detached”). [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p><em>relieving himself</em>. C. <span class="ch">大小便</span>. This Chinese expression is a euphemism for defecating and urinating. [<a href="#ref5">back</a>]</p></li>
+<li id="n6"><p><em>warriors … brahmins … householders … ascetics</em>. S. <em>kṣatriya</em>, <em>brāhmaṇa</em>, <em>gṛhapati</em>, and <em>śramaṇa</em>. The warriors were in later eras the nobility of India, being the heads of government and the military. Householders were influential people due to their wealth like today’s urban middle class, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life, taken vows of poverty, and adopted a nomadic life.</p>
+<p>Brahmins often served as administrators and priests in ancient India. Later in history, they more closely resembled a class of people defined by their profession, but originally they were a distinct ethnic group or tribe. Class and tribal identities blurred together in Indian civilization because of the practice of assigning tribes to particular professions. I don’t translate S. <em>brāhmaṇa</em> to “priest” anymore because they were not always priests, but they did hold a high social standing regardless of their profession. [<a href="#ref6">back</a>]</p></li>
+<li id="n7"><p>While AN 7.68 lacks this conclusion, a very similar passage about the superiority of the person who benefits themselves and others is found in AN 4.95. The metaphor that likens the best to ghee is also used to praise other types of people in <em>sutta</em>s like DN 9, SN 34.1-2 and 34.55, as well as AN 5.181, 5.190, and 10.91. Thus, we can see that it was a fairly well known type of praise, which is also found in the conclusions of EĀ 39.1 and T27. The Mahāyāna <cite>Parinirvāṇa Sūtra</cite> version instead likens the best person to a wishing jewel. [<a href="#ref7">back</a>]</p></li>
+<li id="n8"><p>The <cite>Madhyama Agama</cite> translation is unique (to my knowledge) in using these ending character counts as a method of copyist error detection. My count of the received Taisho text for this <em>sūtra</em> is 1,424 characters. This total would come down to 1,423 characters if we adopt the alternate reading in paragraph 3 that deletes a superfluous <span class="ch">是</span>. [<a href="#ref8">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 23 September 2024</p>
+<p class='revised'>Last Revised: 11 December 2025</p>
 
 <hr/>
