--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -213,7 +213,7 @@ next: MA_002.html
 <li id="n6"><p><em>warriors … brahmins … householders … ascetics</em>. S. <em>kṣatriya</em>, <em>brāhmaṇa</em>, <em>gṛhapati</em>, and <em>śramaṇa</em>. The warriors were in later eras the nobility of India, being the heads of government and the military. Householders were influential people due to their wealth like today’s urban middle class, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life, taken vows of poverty, and adopted a nomadic life.</p>
 <p>Brahmins often served as administrators and priests in ancient India. Later in history, they more closely resembled a class of people defined by their profession, but originally they were a distinct ethnic group or tribe. Class and tribal identities blurred together in Indian civilization because of the practice of assigning tribes to particular professions. I don’t translate S. <em>brāhmaṇa</em> to “priest” anymore because they were not always priests, but they did hold a high social standing regardless of their profession. [<a href="#ref6">back</a>]</p></li>
 <li id="n7"><p>While AN 7.68 lacks this conclusion, a very similar passage about the superiority of the person who benefits themselves and others is found in AN 4.95. The metaphor that likens the best to ghee is also used to praise other types of people in <em>sutta</em>s like DN 9, SN 34.1-2 and 34.55, as well as AN 5.181, 5.190, and 10.91. Thus, we can see that it was a fairly well known type of praise, which is also found in the conclusions of EĀ 39.1 and T27. The Mahāyāna <cite>Parinirvāṇa Sūtra</cite> version instead likens the best person to a wishing jewel. [<a href="#ref7">back</a>]</p></li>
-<li id="n8"><p>The <cite>Madhyama Agama</cite> translation is unique (to my knowledge) in using these ending character counts as a method of copyist error detection. My count of the received Taisho text for this <em>sūtra</em> is 1,424 characters. This total would come down to 1,423 characters if we adopt the alternate reading in paragraph 3 that deletes a superfluous <span class="ch">是</span>. [<a href="#ref8">back</a>]</p></li>
+<li id="n8"><p>The <cite>Madhyama Āgama</cite> translation is unique (to my knowledge) in using these ending character counts as a method of copyist error detection. My count of the received Taisho text for this <em>sūtra</em> is 1,424 characters. This total would come down to 1,423 characters if we adopt the alternate reading in paragraph 3 that deletes a superfluous <span class="ch">是</span>. [<a href="#ref8">back</a>]</p></li>
 </ol>
 <hr/>
 
